# cfo_autopilot

./: .gitignore  1С - коннект.md  AGENTS.md  CONTEXT.md  DESIGN.md  README.md  docker-compose.yml  pytest.ini  setup-local.sh  Продуктовое ТЗ_ «Финансовый автопилот» для МСБ в Р.md  финансовый_автопилот_mvp_0106d58b.plan.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_receivable_aging.py
backend/app/: main.py
backend/app/bot/: __init__.py  digest.py
backend/app/core/: audit.py  auth.py  config.py  database.py  rbac.py
backend/app/middleware/: tenant.py
backend/app/models/: __init__.py  models.py
backend/app/routers/: __init__.py  ai_chat.py  audit.py  auth.py  dashboard.py  imports.py  obligations.py  onboarding.py  reports.py  users.py
backend/app/services/explain/: engine.py
backend/app/services/forecast/: engine.py  snapshot.py
backend/app/services/ingestion/: bank_csv_parser.py  client_bank_exchange_parser.py  deduper.py  import_service.py  onec_file_adapter.py  parser_registry.py
backend/app/services/llm/: adapter.py  questions.yaml
backend/app/services/onboarding/: status.py
backend/app/services/reconciliation/: engine.py  queries.py
backend/app/services/report/: actions.py  context.py  email.py  pdf.py  service.py
backend/app/services/signals/: cash_gap.py  engine.py
backend/app/workers/: settings.py  tasks.py
bot/: digest.py  message_builder.py
docs/: PILOT.md
frontend/: Dockerfile  next.config.js  package-lock.json  (+3 more)
(+53 files in other folders)
