[tool.poetry]
name = "cfo-autopilot-backend"
version = "0.1.0"
description = "Финансовый автопилот — FastAPI backend"
authors = []
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
alembic = "^1.13.0"
supabase = "^2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.0.0"
chardet = "^5.2.0"
arq = "^0.26.0"
redis = "^5.0.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
openai = "^1.30.0"
pyyaml = "^6.0.0"
python-dotenv = "^1.0.0"
email-validator = "^2.3.0"
reportlab = "^4.2.0"
aiosmtplib = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
faker = "^25.0.0"
psycopg2-binary = "^2.9.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".."]
testpaths = ["../tests/unit", "../tests/integration"]

